[package]
name = "barp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aya = "0.10"
slog = "2.7.0"
slog-async = "2.7.0"
slog-term = "2.9.0"
lazy_static = "1.4.0"
bytes = "1.1.0"
mio = { version = "0.8", features = ["os-poll", "os-ext"] }
clap = "2"
pnet = "0.28.0"
byteorder = "1.4.3"
